# mozjpeg-sys

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
benches/: bench.rs
examples/: reencode.rs
src/: build.rs  build.sh  ffi.rs  jerror.rs  lib.rs  transform.rs  turbojpeg.rs
tests/: dc.rs
