[package]
name = "mozjpeg-sys"
description = "FFI bindings for MozJPEG v4.\n\nMozJPEG is automatically built and linked statically. Requires nasm and a C compiler."
categories = [ "external-ffi-bindings", "multimedia::images" ]
authors = ["Kornel <kornel@geekhood.net>"]
include = ["/src/*.rs", "/vendor/*.c", "/vendor/*.h", "/vendor/simd/**", "/Cargo.toml", "/README.md"]
keywords = ["JPEG", "mozjpeg", "libjpeg", "static"]
readme = "README.md"
repository = "https://github.com/kornelski/mozjpeg-sys.git"
homepage = "https://lib.rs/mozjpeg-sys"
license = "IJG"
build = "src/build.rs"
links = "jpeg"
version = "1.0.1"
edition = "2018"

[badges]
travis-ci = { repository = "kornelski/mozjpeg-sys" }

[build-dependencies]
dunce = "1.0.2"

[build-dependencies.cc]
features = ["parallel"]
version = "1.0.69"

[build-dependencies.nasm-rs]
optional = true
version = "0.2.0"

[[example]]
name = "reencode"
path = "examples/reencode.rs"

[dependencies]
libc = "0.2.98"

[features]
default = ["nasm_simd_parallel_build"]
with_simd = [] # nasm is required for x86, but not ARM
nasm_simd = ["with_simd", "nasm-rs"]
nasm_simd_parallel_build = ["nasm_simd", "nasm-rs/parallel"]
unwinding = []
arith_dec = []
arith_enc = []
turbojpeg_api = ["jpegtran"]
jpegtran = []
jpeg70_abi = ["arith_dec", "arith_enc"]
jpeg80_abi = ["jpeg70_abi"]

[lib]
name = "mozjpeg_sys"
crate-type = ["staticlib", "lib"]

[dev-dependencies]
cloudflare-soos = "2.0.0"
arrayvec = "0.7.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
